# Modelz

./: Cargo.toml  LICENSE  README.md
src/: gltf.rs  lib.rs  obj.rs  ply.rs  stl.rs
tests/: cube.glb  cube.ply  gltf.rs  obj.rs  ply.rs  stl.rs
