[package]
name = "modelz"
version = "0.1.2"
edition = "2021"
author = "Alexander Medvedev"
description = "A library to load various 3D file formats into a shared, in-memory representation"
readme = "README.md"
license = "MIT"
keywords = ["model", "gltf", "obj", "assimp"]
categories = ["rendering::data-formats", "graphics", "game-development"]
repository = "https://github.com/ventengine/Modelz"

[badges]
actively-developed = {}

[features]
default = ["obj", "gltf"]
obj = ["dep:tobj"]
gltf = ["dep:gltf"]

[dependencies]
log = "0.4"
image = "0.25"

# glTF 2.0
gltf = {version = "1.4.0", optional = true }
# OBJ Wavefront
tobj = { version = "4.0.0", features = ["async"], optional = true }